<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.aiutovicino.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_portafoglio"
        android:name="com.example.aiutovicino.ui.portafoglio.PortafoglioFragment"
        android:label="@string/menu_portafoglio"
        tools:layout="@layout/fragment_portafoglio" />

    <fragment
        android:id="@+id/nav_annunci"
        android:name="com.example.aiutovicino.ui.annunci.AnnunciFragment"
        android:label="@string/menu_myannunci"
        tools:layout="@layout/fragment_annunci" />

    <fragment
        android:id="@+id/nav_applicazioni"
        android:name="com.example.aiutovicino.ui.applicazioni.ApplicazioniFragment"
        android:label="@string/menu_myapplicazioni"
        tools:layout="@layout/fragment_applicazioni" />

    <fragment
        android:id="@+id/nav_convalida"
        android:name="com.example.aiutovicino.ui.convalida.ConvalidaFragment"
        android:label="@string/menu_convalida"
        tools:layout="@layout/fragment_convalida" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.aiutovicino.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>