<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unive.aiutovicino.MainActivity">

 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingBottom="@dimen/activity_vertical_margin">

   <TextView
       android:id="@+id/text_scegli_categoria"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:text="Scegli Categoria"
       android:textSize="18sp"
       app:layout_constraintTop_toTopOf="parent"
       tools:layout_editor_absoluteX="16dp" />

   <Spinner
       android:id="@+id/input_categoria"
       android:layout_width="match_parent"
       android:layout_height="60dp"
       android:layout_marginTop="10dp"
       app:layout_constraintEnd_toEndOf="parent"
       android:hint="@string/Inserisci_Categoria"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/text_scegli_categoria" />

   <EditText
       android:id="@+id/input_data"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:background="@drawable/background_graphic"
       android:drawableLeft="@drawable/ic_calendar"
       android:drawablePadding="20dp"
       android:focusable="false"
       android:hint="@string/Inserisci_Data"
       android:inputType="none"
       android:paddingLeft="8dp"
       android:paddingTop="12dp"
       android:paddingRight="12dp"
       android:paddingBottom="12dp"
       android:selectAllOnFocus="true"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/input_categoria" />

   <EditText
       android:id="@+id/input_orario"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:background="@drawable/background_graphic"
       android:drawableLeft="@drawable/ic_time"
       android:drawablePadding="20dp"
       android:focusable="false"
       android:hint="@string/Inserisci_Orario"
       android:inputType="none"
       android:paddingLeft="8dp"
       android:paddingTop="12dp"
       android:paddingRight="12dp"
       android:paddingBottom="12dp"
       android:selectAllOnFocus="true"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/input_data" />

   <EditText
       android:id="@+id/input_partecipanti"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:background="@drawable/background_graphic"
       android:drawableLeft="@drawable/ic_user"
       android:drawablePadding="20dp"
       android:hint="@string/Inserisci_Partecipanti"
       android:inputType="numberDecimal"
       android:paddingLeft="8dp"
       android:paddingTop="12dp"
       android:paddingRight="12dp"
       android:paddingBottom="12dp"
       android:selectAllOnFocus="true"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/input_orario" />

   <EditText
       android:id="@+id/input_luogo"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:background="@drawable/background_graphic"
       android:drawableLeft="@drawable/ic_place"
       android:drawablePadding="20dp"
       android:hint="@string/Inserisci_Luogo"
       android:inputType="text"
       android:paddingLeft="8dp"
       android:paddingTop="12dp"
       android:paddingRight="12dp"
       android:paddingBottom="12dp"
       android:selectAllOnFocus="true"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/input_partecipanti" />

   <EditText
       android:id="@+id/input_descrizione"
       android:layout_width="match_parent"
       android:layout_height="100dp"
       android:layout_marginTop="20dp"
       android:background="@drawable/background_graphic"
       android:drawableLeft="@drawable/ic_description"
       android:drawablePadding="20dp"
       android:hint="@string/Inserisci_Descrizione"
       android:inputType="textMultiLine|text"
       android:paddingLeft="8dp"
       android:paddingTop="12dp"
       android:paddingRight="12dp"
       android:paddingBottom="12dp"
       android:selectAllOnFocus="true"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/input_luogo" />

   <EditText
       android:id="@+id/input_coin"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:background="@drawable/background_graphic"
       android:drawableLeft="@drawable/ic_coin"
       android:drawablePadding="20dp"
       android:hint="@string/Inserisci_Coin"
       android:inputType="number"
       android:paddingLeft="8dp"
       android:paddingTop="12dp"
       android:paddingRight="12dp"
       android:paddingBottom="12dp"
       android:selectAllOnFocus="true"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.687"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/input_descrizione" />


   <Button
       android:id="@+id/button_crea"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="32dp"
       android:drawablePadding="20dp"
       android:paddingLeft="8dp"
       android:paddingTop="12dp"
       android:paddingRight="12dp"
       android:paddingBottom="12dp"
       android:selectAllOnFocus="true"
       android:text="@string/menu_crea_annuncio"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/input_coin" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>