<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrazione_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.registrazione.RegistrazioneFragment">

    <TextView
        android:id="@+id/titoloRegistrazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="20dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:selectAllOnFocus="true"
        android:text="Registrazione"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="@drawable/background_graphic"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="20dp"
        android:hint="@string/Nome"
        android:inputType="text"
        android:paddingLeft="8dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/cognome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_graphic"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="20dp"
        android:hint="@string/Cognome"
        android:inputType="text"
        android:paddingLeft="8dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_graphic"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="20dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cognome" />


    <EditText
        android:id="@+id/nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_graphic"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="20dp"
        android:hint="@string/nickname"
        android:inputType="text"
        android:paddingLeft="8dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_graphic"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="20dp"
        android:hint="@string/prompt_password"
        android:inputType="text"
        android:paddingLeft="8dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname" />

    <Button
        android:id="@+id/button_registrati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:enabled="true"
        android:paddingLeft="8dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>