<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.impostazioni.ImpostazioniFragment">

    <TextView
        android:id="@+id/text_impostazioni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Cambio Dati"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/mod_nome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:hint="@string/Nome"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_impostazioni" />

    <EditText
        android:id="@+id/mod_nickname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/nickname"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mod_email" />

    <EditText
        android:id="@+id/mod_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_email"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mod_cognome" />

    <EditText
        android:id="@+id/mod_cognome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/Cognome"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mod_nome" />

    <TextView
        android:id="@+id/mod_text_nome"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:hint="@string/Nome"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:text="Nome:"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_impostazioni" />

    <TextView
        android:id="@+id/mod_text_cognome"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:hint="@string/Nome"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:text="Cognome:"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mod_text_nome" />

    <TextView
        android:id="@+id/mod_text_email"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:hint="@string/Nome"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:text="Email:"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mod_text_nome" />

    <TextView
        android:id="@+id/mod_text_nickname"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:hint="@string/Nome"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:text="Nickname:"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mod_text_nome" />

    <Button
        android:id="@+id/button_mod_dati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:enabled="true"
        android:text="@string/cambia_dati"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mod_text_nickname"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/button_annulla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:enabled="true"
        android:text="@string/Annulla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mod_text_nickname"
        app:layout_constraintVertical_bias="0.07" />


</androidx.constraintlayout.widget.ConstraintLayout>